--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "scripts": {
+    "start": "node server.js"
+  },
+  "main": "server.js"
   "private": true,
   "engines": {
     "node": ">=0.12.0"
@@ -39,7 +43,7 @@
       ]
     },
     "globals": {
-        "createjs": false
+      "createjs": false
     }
   }
 }
