--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "start": "node server.js"
   },
-  "main": "server.js"
+  "main": "server.js",
   "private": true,
   "engines": {
     "node": ">=0.12.0"
@@ -10,6 +10,7 @@
   "devDependencies": {
     "babel-core": "^5.5.6",
     "browser-sync": "^2.2.1",
+    "connect": "^3.4.0",
     "del": "^1.1.1",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
@@ -29,6 +30,7 @@
     "gulp-useref": "^1.1.1",
     "main-bower-files": "^2.5.0",
     "opn": "^1.0.1",
+    "serve-static": "^1.10.0",
     "wiredep": "^2.2.2"
   },
   "eslintConfig": {
